# Azimuth

./: .gitignore  CLAUDE.md  cloud_setup.sh  pyproject.toml
azimuth/: __init__.py  config.py
docs/: PROJECT_AZIMUTH_perplexity.md
findings/: 01_causal_metric_geometry.ipynb  02_cubic_steering_response.ipynb
notebooks/: 01_datasets.ipynb  02_vector_extraction.ipynb  03_causal_metric_tensor.ipynb  04.1_metric_properties.ipynb  04.2_forman_ricci_curvature.ipynb  04.3_community_detection.ipynb  04.4_umap_visualization.ipynb  04.5_token_norms.ipynb  04.5b_token_norms_euclidean.ipynb  04.5c_angular_warping.ipynb  04.6_quasar_tokens.ipynb  04.6a2_quasar_angles.ipynb  04.6a3_main_sequence_orthogonality.ipynb  04.6a4_structural_subspace_orthogonality.ipynb  04.6a5_quasar_angular_census.ipynb  04.6a_deep_space_quasars.ipynb  05_vector_extraction_causal.ipynb  06.1_steering_sweep.ipynb  06.1b_steering_sweep_layer35.ipynb  06.2_steering_sweep_cloud.ipynb  06.2a_analysis.ipynb  06.2b_cubic_fit.ipynb  06.3_all_layers_sweep.ipynb  06.3a_analysis.ipynb  06.4_multiband_scan.ipynb  06.4a_analysis.ipynb  06.4b_fit_exponential.ipynb  06.4c_curvature_logometers.ipynb  07.1_knn_extraction.ipynb  07.2_umap_32k.ipynb  07.3_color_by_norm.ipynb  07.41_euclidean_embedding.ipynb  07.42_euclidean_visualization.ipynb  07.43_causal_embedding.ipynb  07.44_causal_visualization.ipynb  07.45_density_analysis.ipynb  07.46_ring_structure.ipynb  07.51_reconstruct_distance_matrix.ipynb  07.52_persistent_homology.ipynb  07.53_density_vs_norm.ipynb  (+31 more)
notes/: causal_metric.md  eigenbasis.md  flrw_expansion.md  (+3 more)
