[project]
name = "azimuth"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.8.0,<2.9.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "textstat>=0.7.0",
    "datasets>=4.3.0",
    "tqdm>=4.67.1",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "python-louvain>=0.16",
    "networkx>=3.5",
    "umap-learn>=0.5.9.post2",
    "seaborn>=0.13.2",
    "ripser>=0.6.12",
]
